--- a/src/templates/main-content/comfort-model-s/comfort-model-s.css
+++ b/src/templates/main-content/comfort-model-s/comfort-model-s.css
@@ -9,7 +9,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-image: resolve('tesla-bg.png');
+        background-image: inline('../images/tesla-bg.png');
         background-repeat: no-repeat;
         background-size: 84%;
         background-position: -90% bottom;
@@ -42,21 +42,21 @@
         }
     }
     &__display {
-        background-image: resolve('phone.svg');
+        background-image: inline('../images/phone.svg');
         background-repeat: no-repeat;
         background-position: left center;
         background-size: 30px;
         padding-left: 50px;
     }
     &__wifi {
-        background-image: resolve('wifi.svg');
+        background-image: inline('../images/wifi.svg');
         background-repeat: no-repeat;
         background-size: 40px;
         background-position: left center;
         padding-left: 50px;
     }
     &__baggage-scope {
-        background-image: resolve('fuel.svg');
+        background-image: inline('../images/fuel.svg');
         background-repeat: no-repeat;
         background-size: 30px;
         background-position: left center;
