--- a/src/templates/main-content/about-model-s/about-model-s.hbs
+++ b/src/templates/main-content/about-model-s/about-model-s.hbs
@@ -19,5 +19,5 @@
             <a href="#" class="call-to-action__action-btn action-btn_order action-btn_red-btn">Заказать</a>
         </div>
     </div>
-    <img src="images/check.svg" alt="Go down" class="go-down-btn">
+    <img src="./images/check.svg" alt="Go down" class="go-down-btn">
 </section>
